Refactor Admin components for improved language support and UI consistency
- Removed the settings option from the AdminLayout dropdown for a cleaner interface.
- Updated the Login component to utilize the useLanguage hook for internationalization, enhancing user experience with translated messages.
- Added new translations for various UI elements in both English and Tibetan, ensuring better accessibility and clarity for users.

--- a/frontend/src/utils/i18n/locales/bod/bod.json
+++ b/frontend/src/utils/i18n/locales/bod/bod.json
@@ -246,5 +246,29 @@
     "settings": "སྒྲིག་འཇུག",
     "logOut": "ཕྱིར་ཐོན།",
     "loggedOutSuccessfully": "ཕྱིར་ཐོན་བྱས་ཟིན།",
-    "allCategories": "སྡེ་ཚན་ཡོངས།"
+    "allCategories": "སྡེ་ཚན་ཡོངས།",
+    "adminLogin": "དོ་དམ་པའི་ནང་འཛུལ།",
+    "createAccount": "ཐོ་ཁུངས་གསར་པ་བཟོ་བ།",
+    "signInToAccessAdminPanel": "དོ་དམ་ལྷན་ཚོགས་ལ་བལྟ་ཆེད་ནང་འཛུལ་བྱེད།",
+    "createNewUserAccount": "སྤྱོད་མཁན་ཐོ་ཁུངས་གསར་པ་བཟོ་བ།",
+    "login": "ནང་འཛུལ།",
+    "createUser": "སྤྱོད་མཁན་གསར་པ་བཟོ་བ།",
+    "username": "སྤྱོད་མཁན་མཚན།",
+    "enterUsername": "སྤྱོད་མཁན་མཚན་འཇུག",
+    "email": "གློག་འཕྲིན།",
+    "adminEmailPlaceholder": "admin@kangyur.org",
+    "userEmailPlaceholder": "user@example.com",
+    "password": "གསང་ཚིག",
+    "enterYourPassword": "གསང་ཚིག་འཇུག",
+    "enterPasswordMin6Chars": "གསང་ཚིག་འཇུག (ཉུང་ཤོས་ཚིག་གྲངས་༦)",
+    "passwordMin6Chars": "གསང་ཚིག་ཉུང་ཤོས་ཚིག་གྲངས་༦ ཡོད་དགོས།",
+    "signingIn": "ནང་འཛུལ་བཞིན་པ།",
+    "creatingAccount": "ཐོ་ཁུངས་བཟོ་བཞིན་པ།",
+    "signIn": "ནང་འཛུལ།",
+    "defaultCredentials": "སྔོན་སྒྲིག་ཆོག་མཆན། admin@kangyur.org / admin@123",
+    "loginSuccessful": "ནང་འཛུལ་བྱས་ཟིན།",
+    "pleaseFillAllFields": "ཁྱེད་རང་གིས་ཚང་མའི་ཁྱབ་ཁོངས་བཀོད་རོགས།",
+    "accountCreatedSuccessfully": "ཐོ་ཁུངས་བཟོ་སྐྲུན་བྱས་ཟིན། ད་ལྟ་ཁྱེད་རང་ནང་འཛུལ་བྱས་ཟིན།",
+    "loginFailed": "ནང་འཛུལ་བྱེད་མ་ཐུབ།",
+    "registrationFailed": "ཐོ་ཁུངས་བཟོ་སྐྲུན་བྱེད་མ་ཐུབ།"
 }
