--- a/frontend/src/utils/i18n/locales/en/en.json
+++ b/frontend/src/utils/i18n/locales/en/en.json
@@ -246,5 +246,29 @@
     "settings": "Settings",
     "logOut": "Log out",
     "loggedOutSuccessfully": "Logged out successfully",
-    "allCategories": "All Categories"
+    "allCategories": "All Categories",
+    "adminLogin": "Admin Login",
+    "createAccount": "Create Account",
+    "signInToAccessAdminPanel": "Sign in to access the admin panel",
+    "createNewUserAccount": "Create a new user account",
+    "login": "Login",
+    "createUser": "Create User",
+    "username": "Username",
+    "enterUsername": "Enter username",
+    "email": "Email",
+    "adminEmailPlaceholder": "admin@kangyur.org",
+    "userEmailPlaceholder": "user@example.com",
+    "password": "Password",
+    "enterYourPassword": "Enter your password",
+    "enterPasswordMin6Chars": "Enter password (min. 6 characters)",
+    "passwordMin6Chars": "Password must be at least 6 characters long",
+    "signingIn": "Signing in...",
+    "creatingAccount": "Creating account...",
+    "signIn": "Sign In",
+    "defaultCredentials": "Default credentials: admin@kangyur.org / admin@123",
+    "loginSuccessful": "Login successful",
+    "pleaseFillAllFields": "Please fill in all fields",
+    "accountCreatedSuccessfully": "Account created successfully! You are now logged in.",
+    "loginFailed": "Login failed",
+    "registrationFailed": "Registration failed"
 }
